--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Enis Masic emasic@hawk.iit.edu</p>
 
 <h2>Professor:</h2>
-<p>Daniel Krieglstein</p)
+<p>Daniel Krieglstein</p>
 
 <h2>Lecture Days, Time and Place:</h2>
 <p>Tuesday 6:25pm to 9:05pm, Hermann Hall, Room:MEZZANINE </p>
